Increased memory limit due to failing tests on WINx86. Fixies #182